--- a/.github/workflows/JestTestAutomation.yml
+++ b/.github/workflows/JestTestAutomation.yml
@@ -3,8 +3,9 @@ name: Jest Automatic Testing
 
 # Event triggers on pull request event
 # For more detail visit https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on
-on: pull_request
-  branches: [ main ]
+on:
+  pull_request:
+    branches: [ main ]
 
 # The jobs this action will run. You can write as many jobs as you want.
 # For more detail on this section visit https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobs
