--- a/.github/workflows/JestTestAutomation.yml
+++ b/.github/workflows/JestTestAutomation.yml
@@ -5,7 +5,7 @@ name: Jest Automatic Testing
 # For more detail visit https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 # The jobs this action will run. You can write as many jobs as you want.
 # For more detail on this section visit https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobs
@@ -17,6 +17,10 @@ jobs:
     # Machine which this action will be run on. For a list of all the machines available/how to run on self hosted machine visit
     # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
     runs-on: ubuntu-latest
+
+    # Environment declaration
+    environment:
+      name: TEST
 
     # Steps this job must take to complete
     steps:
