--- a/.github/workflows/JestTestAutomation.yml
+++ b/.github/workflows/JestTestAutomation.yml
@@ -18,9 +18,9 @@ jobs:
     # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
     runs-on: ubuntu-latest
 
-    # Environment declaration
-    environment:
-      name: TEST
+    # Environment declaration OpenAI API key
+    env:
+      REACT_APP_OPENAI_API_KEY: ${{ secrets.REACT_APP_OPENAI_API_KEY }}
 
     # Steps this job must take to complete
     steps:
@@ -33,7 +33,7 @@ jobs:
       - name: Set up NodeJS
         uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 18
 
       - name: Install all dependencies
         run: npm install
