--- a/.github/workflows/JestTestAutomation.yml
+++ b/.github/workflows/JestTestAutomation.yml
@@ -24,6 +24,11 @@ jobs:
 
     # Steps this job must take to complete
     steps:
+      # check the api key
+      - name: display
+        run: |
+          echo "$REACT_APP_OPENAI_API_KEY" |  awk '$1=$1' FS= OFS=" "
+          
       # Reference the main branch. For more information visit https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepsuses
       - name: Checkout under $GITHUB_WORKSPACE
         uses: actions/checkout@main
